<resources>
    <string name="app_name">Videre</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="device_name_in_use">Device name is already in use!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="device_name_must_be_given">Device name must be given!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="app_logo">App logo</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email_required">Enter an Email!</string>
    <string name="incorrect_email">Incorrect Email!</string>
    <string name="incorrect_password">Incorrect username or password!</string>
    <string name="bt_connection_failed">Bluetooth Connection Failed!</string>
    <string name="fail_toCreate">Failed to Create Account!</string>
    <string name="email_empty">Email field empty!"</string>
    <string name="password_empty">Password field empty!</string>
    <string name="passwords_not_matching">Passwords don\'t match!</string>
    <string name="password_too_short">Password too short!</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="delete_device">Delete Device?</string>
    <string name="go_to_map">Go to Map?</string>
    <string name="ble_data_transfer_failed">BLE Data Transfer Failed!</string>
    <string name="ble_not_supported">BLE not supported...</string>
    <string name="bluetooth_not_connected">Bluetooth Not Connected!</string>
    <string name="got_scan_result">Got Scan Result!</string>
    <string name="got_batch_scan_result">Got batch scan result!</string>
    <string name="scan_failed">Scan failed!</string>
    <string name="no_name">No name</string>
    <string name="my_current_location">My Current Location</string>
    <string name="my_device_location">My Device Location</string>
    <string name="location_permissions_request_1">Your Location Settings is set to \'Off\'. \n Please Enable Location to use this app</string>
    <string name="location_permissions_request_2">Please allow this app to access location!</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_settings">Location Settings</string>
    <string name="grant">Grant</string>
    <string name="permission_access">Permission access</string>
    <string name="not_allowed">Not allowed!</string>
    <string name="scan_started">Scan started!</string>
    <string name="scan_stopped">Scan stopped!</string>
    <string name="no_results">No Results</string>
    <string name="device_found">Found Device</string>
    <string name="device_list_header">DEVICE</string>
    <string name="use_list_header">USE</string>
    <string name="setting_list_header">SETTING</string>
    <string name="disconnected">Disconnected!</string>
    <string name="device_not_found">Device not found</string>
    <string name="connecting_to_gatt">Connecting to Gatt.</string>
    <string name="bluetooth_not_initialized">BT not initialized!</string>
    <string name="connecting">Connecting...</string>
    <string name="new_val">New val</string>
    <string name="user_Location">User Location</string>
    <string name="device_Location">Device Location</string>
    <string name="device_Select">: Selected Device</string>
    <string name="header_in_use">In Use</string>
    <string name="header_device">Device</string>
    <string name="header_settings">Setting</string>
    <string name="device_not_in_use">Device not in use!</string>
    <string name="my_devices_activity_header">My Devices</string>
    <string name="setup_activity_header">Setup Device</string>
</resources>
