<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/header_device"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/h_device"
        android:layout_weight="1"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/header_in_use"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/h_inUse"
        android:layout_weight="1"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/header_settings"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/h_setting"/>

</LinearLayout>